--- a/index.css
+++ b/index.css
@@ -32,6 +32,12 @@ footer {
   padding-top: 0;
   padding-bottom: 0;
 }
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+}
 
 .no-padding {
   padding: 0;
