added all pages and testing navigation

--- a/styling/index.css
+++ b/styling/index.css
@@ -1,27 +1,11 @@
-/*This is my CSS page*/
+/*CSS for index.html*/
 
 /*Color Palette*/
 /*White #ffffff*/
 /**/
 
-header {
-  height: 3.5rem;
-}
-body {
-  background-color: #C0C9CC;
-  width: auto;
-}
-footer {
-  background-color: #606462;
-  width: 100%;
-  padding: 1rem;
-}
-
-.page-container {
-  padding-top: 3.5rem;
-}
 .bio-pic {
-  background-image: url('media/bioPic.jpg');
+  background-image: url('/media/bioPic.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
